# FS26-RCV

./: .gitignore  CMakeLists.txt  FS26-RCV.c  README.md  fs26_interface.py  lr1121_config.c  lr1121_config.h
assets/: custom.css
src/gpio/: CMakeLists.txt  gpio.c  gpio.h
src/lr1121/: CMakeLists.txt  lr1121_modem_hal.c  lr11xx_hal.c  wavesahre_lora_1121.c  wavesahre_lora_1121.h
src/lr1121/lr1121_printers/: lr11xx_printf_info.h
src/spi/: CMakeLists.txt  spi.c  spi.h
wiki/: C-Receiver-Code.md  Hardware-Construction.md  Home.md  Python-Web-Interface.md  Telemetry-Packet-Format.md
